--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "glovers",
   "version": "0.1.0",
-  "homepage":  "https://elcis2614.github.io/gloverBrothers",
+  "homepage": "https://elcis2614.github.io/home",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,7 +14,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "scripts": {
     "predeploy": "npm run build",
